assignment #3: fix issue with authorized requests for user and finish getBalance method